--- a/public/publication/pbnh-xpbd/index.html
+++ b/public/publication/pbnh-xpbd/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: October 15, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: November 1, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -41,7 +41,8 @@
   
     
   
-  <meta name="description" content="The eXtended Position Based Dynamics algorithm (XPBD) enables unified simulation of various materials from fluids to both elastic solids and stiff solids. In particular, finite element based neo-Hookean models can simulate near incompressible materials by means of a decoupled compliant constraint formulation. Due to XPBD’s reliance on local constraint projections in the solver loop, its computational nature lends itself to parallelization by means of graph coloring algorithms used to determine partitions of independent constraints which can be solved simultaneously. However, minimal graph coloring is bounded from below by the maximum valence of the finite element mesh, thus hindering parallelization opportunities. In this paper, we propose a novel graph clustering approach on the constraint graph which groups highly dependent constraints into supernodes. By applying graph coloring on the supernodal constraint graph, we are able to significantly reduce the number of partitions, thus enhancing parallelization of the solver. Furthermore, we accelerate convergence of the neo-Hookean XPBD solver by a coupled constraint formulation, resulting in enhanced stability and efficiency compared to previous approaches." />
+  <meta name="description" content="Best Paper honourable mention at the 15th annual ACM/SIGGRAPH conference on Motion, Interaction and Games (MIG 2022).
+" />
 
   
   <link rel="alternate" hreflang="en-us" href="http://localhost:1313/publication/pbnh-xpbd/" />
@@ -185,7 +186,8 @@
   <meta property="og:site_name" content="Quoc-Minh Ton-That" />
   <meta property="og:url" content="http://localhost:1313/publication/pbnh-xpbd/" />
   <meta property="og:title" content="Parallel Block Neo-Hookean XPBD using Graph Clustering | Quoc-Minh Ton-That" />
-  <meta property="og:description" content="The eXtended Position Based Dynamics algorithm (XPBD) enables unified simulation of various materials from fluids to both elastic solids and stiff solids. In particular, finite element based neo-Hookean models can simulate near incompressible materials by means of a decoupled compliant constraint formulation. Due to XPBD’s reliance on local constraint projections in the solver loop, its computational nature lends itself to parallelization by means of graph coloring algorithms used to determine partitions of independent constraints which can be solved simultaneously. However, minimal graph coloring is bounded from below by the maximum valence of the finite element mesh, thus hindering parallelization opportunities. In this paper, we propose a novel graph clustering approach on the constraint graph which groups highly dependent constraints into supernodes. By applying graph coloring on the supernodal constraint graph, we are able to significantly reduce the number of partitions, thus enhancing parallelization of the solver. Furthermore, we accelerate convergence of the neo-Hookean XPBD solver by a coupled constraint formulation, resulting in enhanced stability and efficiency compared to previous approaches." /><meta property="og:image" content="http://localhost:1313/publication/pbnh-xpbd/featured.png" />
+  <meta property="og:description" content="Best Paper honourable mention at the 15th annual ACM/SIGGRAPH conference on Motion, Interaction and Games (MIG 2022).
+" /><meta property="og:image" content="http://localhost:1313/publication/pbnh-xpbd/featured.png" />
     <meta property="twitter:image" content="http://localhost:1313/publication/pbnh-xpbd/featured.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -240,7 +242,7 @@
       "url": "http://localhost:1313/media/icon_hu10829472966132691797.png"
     }
   },
-  "description": "The eXtended Position Based Dynamics algorithm (XPBD) enables unified simulation of various materials from fluids to both elastic solids and stiff solids. In particular, finite element based neo-Hookean models can simulate near incompressible materials by means of a decoupled compliant constraint formulation. Due to XPBD’s reliance on local constraint projections in the solver loop, its computational nature lends itself to parallelization by means of graph coloring algorithms used to determine partitions of independent constraints which can be solved simultaneously. However, minimal graph coloring is bounded from below by the maximum valence of the finite element mesh, thus hindering parallelization opportunities. In this paper, we propose a novel graph clustering approach on the constraint graph which groups highly dependent constraints into supernodes. By applying graph coloring on the supernodal constraint graph, we are able to significantly reduce the number of partitions, thus enhancing parallelization of the solver. Furthermore, we accelerate convergence of the neo-Hookean XPBD solver by a coupled constraint formulation, resulting in enhanced stability and efficiency compared to previous approaches."
+  "description": "Best Paper honourable mention at the 15th annual ACM/SIGGRAPH conference on Motion, Interaction and Games (MIG 2022).\n"
 }
 </script>
 
@@ -1476,7 +1478,7 @@
     <a
       class="pr-2 transition-transform hover:scale-125 hover:text-primary-700 dark:hover:text-primary-400"
       style="will-change:transform;"
-      href="https://www.linkedin.com/"
+      href="https://www.linkedin.com/in/quoc-minh-ton-that-09b707333"
       target="_blank" rel="noopener" rel="me noopener noreferrer"
       aria-label="Brands/Linkedin"
     ><svg style="height: 1em;" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path fill="currentColor" d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a>
